html/src/theme.material3.scss
/* ... */
*:hover::-webkit-scrollbar-track,
*:focus::-webkit-scrollbar-track,
*:active::-webkit-scrollbar-track {
    background-color: rgba(var(--md-sys-color-outline-variant), 0.2);
}

::-webkit-scrollbar-thumb {
    background-color: rgba(var(--md-sys-color-surface-variant), 0);
    transition: background-color 0.2s ease-in-out;
}
*:hover::-webkit-scrollbar-thumb,
*:focus::-webkit-scrollbar-thumb,
*:active::-webkit-scrollbar-thumb {
    background-color: rgb(var(--md-sys-color-surface-variant));
}
::-webkit-scrollbar-thumb:hover {
    background-color: rgb(var(--md-sys-color-secondary-container));
}

a {
    color: rgb(var(--md-sys-color-primary));
}

div[style*='margin: 0px 0px 10px;'] {
    margin-bottom: 16px !important;
}

.el-tabs--card > .el-tabs__header .el-tabs__item,
.el-tabs--card > .el-tabs__header .el-tabs__nav,
.el-tabs--card > .el-tabs__header {
    border: none;
}

.x-app,
.x-container,
.el-collapse-item__wrap,
.x-login-container {
    background-color: rgba(var(--md-sys-color-background));
}

.x-aside-container {
    background: var(--md-sys-color-surface-1);
}

.x-aside-container .el-select {
    padding: 3px !important;
}

.x-login-container p {
    color: rgb(var(--md-sys-color-on-background));
}

.el-tabs--card > .el-tabs__header .el-tabs__item {
    height: 40px;
    border-radius: 20px;
    color: rgb(var(--md-sys-color-on-surface-variant));
    font-family: var(--md-sys-typescale-label-large-font);
    font-size: var(--md-sys-typescale-label-large-size);
    font-weight: var(--md-sys-typescale-label-large-weight);
    letter-spacing: var(--md-sys-typescale-label-large-tracking);
    padding: 0 24px;
    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
}

.el-tabs--card > .el-tabs__header .el-tabs__item.is-active {
    background-color: rgba(var(--md-sys-color-secondary-container));
    color: rgb(var(--md-sys-color-on-surface));
}

.el-tab-pane .options-container {
    flex-direction: column;
    justify-content: center;
}

.options-container-item {
    margin: 6px 0;
    display: flex;
    flex-wrap: wrap;
}

.options-container-item br + span {
    flex-basis: 100%;
}

.options-container-item .name:first-child {
    flex: 1;
}

.options-container-item *:not(.el-color-picker__color-inner):last-child {
    margin-right: 4px;
}

.options-container[style='margin-top: 45px; border-top: 1px solid rgb(238, 238, 238); padding-top: 30px;'] {
    border-top: 1px solid rgb(var(--md-sys-color-outline-variant)) !important;
}

#x-app .x-container {
    padding: 20px;
}

#x-app .x-aside-container {
    padding: 10px;
}

/* Input filter */

.el-input__inner {
    height: 48px;
}
.el-input__inner,
.el-textarea__inner {
    position: relative;
    background-color: transparent;
    border: 1px solid rgb(var(--md-sys-color-outline));
    border-radius: 8px;
    padding: 12px;
    width: 100%;
}
.el-select__tags {
    margin: 0 12px;
}
.el-input__inner:hover,
.el-select .el-input__inner:focus,
.el-textarea__inner:hover,
.el-select:hover .el-input__inner,
.el-pagination__sizes .el-input .el-input__inner:hover {
    border: 1px solid rgb(var(--md-sys-color-on-surface));
}
.el-range-editor.is-active,
.el-range-editor.is-active:hover,
.el-select .el-input.is-focus .el-input__inner,
.el-input.is-active .el-input__inner,
.el-input__inner:focus,
.el-textarea__inner:focus {
    border: 2px solid rgb(var(--md-sys-color-primary));
}
input[type='text']::placeholder,
input[type='number']::placeholder,
.el-textarea__inner::placeholder {
    color: rgb(var(--md-sys-color-on-surface-variant));
}
input[type='text'],
input[type='number'],
.el-textarea__inner {
    color: rgb(var(--md-sys-color-on-surface));
    font-family: var(--md-sys-typescale-body-large-font);
    line-height: var(--md-sys-typescale-body-large-line-height);
    font-size: var(--md-sys-typescale-body-large-size);
    font-weight: var(--md-sys-typescale-body-large-weight);
    letter-spacing: var(--md-sys-typescale-body-large-tracking);
}
.el-input--mini .el-input__inner {
    height: 36px;
}
.el-pagination--small button,
.el-pagination--small span:not([class*='suffix']),
.el-pagination .el-select .el-input .el-input__inner,
.el-input--mini .el-input__icon,
.el-input--small,
.el-pagination--small .btn-next,
.el-pagination--small .btn-prev,
.el-pagination--small .el-pager li,
.el-pagination--small .el-pager li.btn-quicknext,
.el-pagination--small .el-pager li.btn-quickprev,
.el-pagination--small .el-pager li:last-child {
    height: 45px;
    line-height: 45px;
}
.el-pagination .el-select .el-input .el-input__inner,
.el-input--mini .el-input__icon {
    border-radius: 8px;
}
.el-pagination button.btn-prev,
.el-pagination button.btn-next {
    position: relative;
    background-color: rgb(var(--md-sys-color-secondary-container));
    transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out;
}
.el-pagination button:not(:disabled):hover.btn-prev::after,
.el-pagination button:not(:disabled):hover.btn-next::after {
    background-color: rgba(var(--md-sys-color-on-secondary-container), 0.08);
}
.el-pagination button:not(:disabled):focus.btn-prev::after,
.el-pagination button:not(:disabled):focus.btn-next::after,
.el-pagination button:not(:disabled):active.btn-prev::after,
.el-pagination button:not(:disabled):active.btn-next::after {
    background-color: rgba(var(--md-sys-color-on-secondary-container), 0.12);
}
.el-pagination button:disabled.btn-prev,
.el-pagination button:disabled.btn-next {
    background-color: rgba(var(--md-sys-color-on-surface), 0.12);
    color: rgba(var(--md-sys-color-on-surface), 0.38);
}
.el-pagination button.btn-prev {
    border-top-left-radius: 16px;
    border-bottom-left-radius: 16px;
    padding-left: 12px;
    padding-right: 8px;
}
.el-pagination button.btn-prev::after {
    border-top-left-radius: 16px;
    border-bottom-left-radius: 16px;
}
.el-pagination button.btn-next .el-icon-arrow-right {
    rotate: -90deg;
}
/* ... */

